refactor: padroniza campos de auditoria updated_at
refactor: ajusta TransactionResponse e TransactionMapper

fix: valida categoria ao salvar transação
fix: corrige cálculo do resumo mensal por TransactionType

refactor: padroniza validação de ChatQuestionRequest

feat: adiciona exceções globais e validação de duplicidade de categoria